--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,9 @@ spring.datasource.username=hellojpa
 spring.datasource.password=hellojpa
 
 # JPA ??
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=true
 spring.jpa.database=H2
+
+# ??? ??? ???? (schema.sql, data.sql)
+spring.sql.init.mode=always
